--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -97,3 +97,21 @@ main ol li {
     text-decoration: underline;
     color: #5E8FC9;
 }
+
+@keyframes spin {
+    to {transform: rotate(360deg);}
+}
+
+.Loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: -25px;
+    margin-left: -25px;
+    border-radius: 50%;
+    border-top: 3px solid #000000;
+    border-right: 3px solid transparent;
+    animation: spin .6s linear infinite;
+}
