--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -119,3 +119,8 @@ main ol li {
     border-right: 3px solid transparent;
     animation: spin .6s linear infinite;
 }
+
+.infinite-scroll-list {
+    overflow: auto;
+    height: 90vh;
+}
