refactor(*): clean up code

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -30,97 +30,8 @@ main ol li {
     margin-bottom: 12px;
 }
 
-.PageHeader {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.PageHeader a {
-    cursor: pointer;
-    font-weight: bold;
-    transition: 100ms ease-in-out opacity;
-}
-
-.PageHeader a:hover {
-    opacity: 0.6;
-}
-
-.PageHeader > * + * {
-    margin-left: 24px;
-}
-
-.nav-link {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    height: 100%;
-    padding: 24px;
-    width: 100%;
-    cursor: pointer;
-}
-
-.nav-link:hover,
-.nav-link:active {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.data-list {
-    margin-top: 12px;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.data-list li {
-    width: 32%;
-}
-
-.data-list:not(:first-child) li {
-    margin-top: 12px;
-}
-
-.data-list h3 {
-    margin-bottom: 6px;
-}
-
-.data-list__text {
-    display: block;
-}
-
-.link {
-    display: block;
-    font-size: inherit;
-    color: #4F8CC4;
-    transition: .2s color ease;
-    cursor: pointer;
-}
-
-.link:hover {
-    text-decoration: underline;
-    color: #5E8FC9;
-}
-
-@keyframes spin {
-    to {transform: rotate(360deg);}
-}
-
-.Loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 50px;
-    height: 50px;
-    margin-top: -25px;
-    margin-left: -25px;
-    border-radius: 50%;
-    border-top: 3px solid #000000;
-    border-right: 3px solid transparent;
-    animation: spin .6s linear infinite;
-}
-
-.infinite-scroll-list {
-    overflow: auto;
-    height: 90vh;
-}
+@import './components/Chrome/PageHeader.css';
+@import './components/Generic/DataList.css';
+@import './components/Generic/Link.css';
+@import './components/Generic/Loader.css';
+@import './components/Generic/InfiniteScroll.css';
