--- a/client/src/css/components/Generic/InfiniteScroll.css
+++ b/client/src/css/components/Generic/InfiniteScroll.css
@@ -1,4 +1,19 @@
 .InfiniteScrollList {
     overflow: auto;
     height: 90vh;
+    list-style: none;
+    display: flex;
+    margin-top: 12px;
+    margin-left: -1%;
+    margin-right: -1%;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.InfiniteScrollList li {
+    width: 12%;
+    padding: 1%;
+    margin-bottom: 12px;
 }
