--- a/client/src/css/components/Generic/Link.css
+++ b/client/src/css/components/Generic/Link.css
@@ -11,7 +11,7 @@
     color: #5E8FC9;
 }
 
-.NavLink {
+.CharacterButton {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 100%;
@@ -21,7 +21,7 @@
     min-height: 80px;
 }
 
-.NavLink:hover,
-.NavLink:active {
+.CharacterButton:hover,
+.CharacterButton:active {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
