--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -16,6 +16,7 @@ button {
 }
 
 @import './components/Chrome/PageHeader.css';
+@import './components/Chrome/ErrorPage.css';
 @import './components/Generic/DataList.css';
 @import './components/Generic/Link.css';
 @import './components/Generic/Search.css';
